# authly

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.standalone  Dockerfile.standalone.minimal  Makefile  README.md  TEST_FIX_SUMMARY.md  authly_security_fixes_needed.py  check_test_results.py  docker-compose.dev.yml  docker-compose.hub.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.tck.yml  docker-compose.yml  enable-completion.sh  pyproject.toml  state-diagram-for-user-account.md
.claude/: CLAUDE.md  README.md  architecture.md  capabilities.md  codebase-structure-current.md  codebase-structure.md  commit-consolidation-plan.md  current-state-comprehensive.md  external-libraries.md  implementation-status.md  memory-comprehensive.md  memory.md  project-consolidation-plan.md  session-consolidation-summary.md  settings.json  task-management.md
.claude/evolution/: README.md
.claude/instructions/: authly-development-practices.md  authly-testing-guide.md
.claude/roadmap/: w3c-did-integration-roadmap.md
.claude/tech-notes/: supabase-integration.md
.gemini/: GEMINI.md
.githooks/: install-hooks.sh  pre-commit
.github/: RELEASE.md  renovate.json
.github/workflows/: build-postgres-cache.yml  build-test-native.yml  build-test-with-docker.yml  conformance-tests.yml  conformance-tests.yml.old  full-stack-test-with-docker.yml  release-pypi.yml  tck-validation-simple.yml
ai_docs/: ADMIN_FRONTEND_FLOW.md  ADMIN_FRONTEND_PLAN.md  DOCKER_PIPELINE_RFC8414_COMPLIANCE.md  FIX_SINGLETON_PATTERN_IN_BOOTSTRAP.md  OAUTH_FLOW_RESEARCH.md  OAUTH_OIDC_TESTING_BEST_PRACTICES.md  TODO.md  USERNAME_VS_EMAIL_IDENTIFIER.md  api-reference-v1.md  cli-auth-oauth21-alternatives.md  cli-auth-solution-auth-code-flow.md  cli-oauth-implementation-summary.md  code_review_corrected.md  fix-codebase-plan-revised.md  fix-oauth21-cli-callback-architecture.md  fix-outdated-auth-flows.md  fix-remaining-features-plan.md  implementation-summary.md  oauth-compliance-findings.md  oauth21-compliance-final-status.md  phase-2-final-gap-analysis.md  phase-2-refactoring-summary.md  phase-7-compliance-tester-fixes.md  redundant-src-code-analysis.md  redundant-tests-code-analysis.md  restore-compliance-instructions.md  test-reduction-strategy.md  test-reduction-tracker.md  test-summary-report-phase2.md
docker/: init-db-and-user.sql
docker-postgres/: init-db-and-user.sql
docker-standalone/: AUTHLY_AS_AUTHZ.md  PSQL_COMPLETION.md  README.md  REDIS_COMPLETION.md  REDIS_GUIDE.md  TROUBLESHOOTING_TOOLS.md  authly.1  fix-pkce-validation.patch  setup-cli-client.py  standalone-init.sh
docker-standalone/adminer/: Dockerfile  README.md  adminer-authly-oauth.php  adminer-oauth.php  index.php  oauth-wrapper.php  plugin.php
docker-standalone/authly-compliance-tester/: COMPREHENSIVE-TOOLKIT.md  Dockerfile  FIXES-SUMMARY.md  HIGH-SECURITY-SCOPE.md  README.md  bootstrap.sh  clear-storage.html  create-oauth-clients.py  docker-compose.yml  entrypoint.sh  index-old.html  index.html  nginx.conf  setup-admin-client.sh  setup-test-client.sh
docker-standalone/authly-db-proxy/: Dockerfile  README.md  pg_proxy.py  redis_proxy.py  requirements.txt  test_proxy.py
docker-standalone/config/: grafana-dashboards.yml  grafana-datasources.yml  pgadmin-servers.json  prometheus.yml  (+1 more)
docs/: README.md  api-reference.md  architecture.md  cli-guide.md  component-architecture.md  deployment-guide.md  docker-deployment.md  docker-hub-deployment.md  docker-standalone-quickstart.md  docker-standalone.md  gdpr-compliance.md  gdpr-implementation-guide.md  login-ui-implementation.md  logout-flow.md  oauth-guide.md  oidc-guide.md  oidc-implementation.md  parallel-testing-guide.md  performance-guide.md  privacy-statement-template.md  prometheus-queries.md  redis-integration.md  security-audit.md  security-guide.md  standalone-shell-demo.md  state-diagram-for-token-lifecycle.md  testing-guide.md  token-refresh-flow.md  troubleshooting-guide.md  user-authentication-flow.md  user-registration-and-verification-flow.md  writing-tone-guidelines.md
examples/: admin_api_example.py  api-test.sh  authly-embedded.py  embeded.py  setup_logging.py
scripts/: README.md  add-database-scopes.py  add-database-scopes.sh  run-integration-tests.sh  setup-completion.sh  show-services-plain.sh  show-services-simple.sh  show-services.sh  start-standalone.sh  stop-standalone.sh  trigger-postgres-cache-build.sh
tck/: .dockerignore  .gitignore  Dockerfile.tck  Makefile  Makefile.old  Makefile.old2  QUICK_START.md  README.md  docker-compose-tck-ci.yml  docker-compose-tck.yml  docker-compose.yml  requirements-tck.txt  requirements.txt  run-conformance.sh  setup.sh  tck_todo.md
tests/: README.md  conftest.py  conftest_helpers.py  test_admin_api.py  test_admin_api_client.py  test_admin_api_client_integration.py  test_admin_bootstrap.py  test_admin_cli.py  test_admin_dependencies.py  test_admin_middleware.py  test_api.py  test_auth.py  test_auth_api.py  test_bootstrap_dev_mode.py  test_bootstrap_password.py  test_committed_fixtures.py  test_conformance_fixes.py  test_isolated_transaction_control.py  test_lifecycle_debug.py  test_main_app.py  test_oauth_authorization.py  test_oauth_dependencies.py  test_oauth_discovery.py  test_oauth_repositories.py  test_oauth_services.py  test_oauth_templates.py  test_oauth_token_flow.py  test_oidc_authorization.py  test_oidc_basic_integration.py  test_oidc_client_management.py  test_oidc_complete_flows.py  test_oidc_compliance_features.py  test_oidc_comprehensive_flows.py  test_oidc_discovery.py  test_oidc_id_token.py  test_oidc_integration_flows.py  test_oidc_integration_flows_simple.py  test_oidc_jwks.py  test_oidc_logout.py  test_oidc_scopes.py  (+14 more)
tests_backup_20250810_165020/: test_client_credentials_flow.py  test_pkce_edge_cases.py  test_token_introspection.py
(+371 files in other folders)
