[tool.poetry]
name = "authly"
version = "0.1.4"
description = "Authentication and Authorization for Python FastAPI"
authors = ["Ove Ranheim <oranheim@gmail.com>"]
readme = "README.md"
packages = [
    { include = "authly", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
starlette = "^0.45.0"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
psycopg = "^3.2.3"
psycopg-pool = "^3.2.4"
psycopg-toolkit = "^0.1.5"
tenacity = "^9.0.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.1.0"
tomli = "^2.2.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
cryptography = "^44.0.1"
bcrypt = "4.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-order = "^1.3.0"
pytest-asyncio = "^0.25.0"
testcontainers = { extras = ["postgresql"], version = "^4.9.0" }
fastapi-testing = ">=0.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.black]
line-length = 120  # Matching flake8 config
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
^/(
  \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
force_single_line = true
lines_after_imports = 2

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
lint.ignore = ["E203"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
